<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_margin="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
        
    <EditText 
        android:id="@+id/dialog_voornaam"
        android:textColor="@android:color/black"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
	    android:lines="1"
	    android:maxLines="1"
        android:hint="@string/voornaam" />
    
    <EditText 
        android:id="@+id/dialog_tussenvoegsels"
        android:textColor="@android:color/black"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
	    android:lines="1"
	    android:maxLines="1"
        android:hint="@string/tussenvoegsels" />
    
    <EditText 
        android:id="@+id/dialog_achternaam"
        android:textColor="@android:color/black"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
	    android:lines="1"
	    android:maxLines="1"
        android:hint="@string/achternaam" />
    
    <View
	    android:layout_width="fill_parent"
	    android:layout_height="1dp"
	    android:background="@android:color/darker_gray" />
    
    <EditText 
        android:id="@+id/dialog_postcode"
        android:textColor="@android:color/black"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
	    android:lines="1"
	    android:maxLines="1"
        android:hint="@string/postcode" />
    
    <EditText 
        android:id="@+id/dialog_nummertoevoeging"
        android:textColor="@android:color/black"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
	    android:lines="1"
	    android:maxLines="1"
        android:hint="@string/huisnummer_toevoeging" />

</LinearLayout>
