<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:orientation="vertical" >

    <nl.avans.glassy.Utils.TextViewHelveticaLight
        android:id="@+id/wijkTitel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/tempwijknaam"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <nl.avans.glassy.Utils.TextViewHelveticaUltralight
        android:id="@+id/deelnemersCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/wijkTitel"
        android:layout_marginLeft="5dp"
        android:text="@string/tempDeelnemers"
        android:textColor="@color/white"
        android:textSize="50sp" />

    <nl.avans.glassy.Utils.TextViewHelveticaLight
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/deelnemersCount"
        android:layout_marginLeft="2dp"
        android:layout_toRightOf="@id/deelnemersCount"
        android:text="@string/deelnemers"
        android:textColor="@color/white"
        android:textSize="25sp"/>

    <nl.avans.glassy.Utils.TextViewHelveticaLight
        android:id="@+id/percentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/deelnemersCount"
        android:layout_marginLeft="5dp"
        android:text="@string/temppercentage"
        android:textColor="@color/white"
        android:textSize="100sp" />

    <nl.avans.glassy.Utils.TextViewHelveticaLight
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/percentage"
        android:layout_marginLeft="2dp"
        android:layout_toRightOf="@id/percentage"
        android:text="@string/procent"
        android:textColor="@color/white"
        android:textSize="100sp" />

    <!-- Typeface for this button is set in code in WijkDetailsFragment init() method -->
    <Button
        android:id="@+id/ikDoeMeeButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/percentage"
        android:layout_margin="5dp"
        android:background="@drawable/wijkbackgroundbox"
        android:text="@string/tempButtonText"
        android:textColor="@color/white"
        android:textSize="24sp" />

</RelativeLayout>