<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
     <nl.avans.glassy.Utils.TextViewHelveticaLight
        android:id="@+id/profiel_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:clickable="true"
        android:text="@string/profiel" />
    
	<nl.avans.glassy.Utils.TextViewHelveticaLight
        android:id="@+id/mijn_wijk_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:clickable="true"
        android:text="@string/mijn_wijk" />
	
	<nl.avans.glassy.Utils.TextViewHelveticaLight
        android:id="@+id/uitloggen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:clickable="true"
        android:text="@string/loguit" />

</LinearLayout>
