<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <nl.avans.glassy.Utils.TextViewHelveticaLight
        android:id="@+id/stappenTitel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:text="@string/stappenTitel"
        android:textColor="@color/white"
        android:textSize="20sp" />
    
    <RelativeLayout
        android:id="@+id/stappenLayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_below="@id/stappenTitel"
        android:background="@drawable/wijkbackgroundbox">
        
        <nl.avans.glassy.Utils.TextViewHelveticaLight
            android:id="@+id/stapText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"             
            android:textSize="20sp" 
            android:text="@string/stap1"
            android:paddingBottom="5dp"          
            android:textColor="@color/white" 
             /> 
             
        <nl.avans.glassy.Utils.TextViewHelveticaLight
            android:id="@+id/stapText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"             
            android:textSize="20sp" 
            android:text="@string/stap2"
            android:layout_below="@+id/stapprogress1"
            android:paddingBottom="5dp"          
            android:textColor="@color/white" 
             /> 
             
        <nl.avans.glassy.Utils.TextViewHelveticaLight
            android:id="@+id/stapText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"             
            android:textSize="20sp" 
            android:text="@string/stap3"
            android:layout_below="@+id/stapprogress2"
            android:paddingBottom="5dp"          
            android:textColor="@color/white" 
             /> 
             
        <nl.avans.glassy.Utils.TextViewHelveticaLight
            android:id="@+id/stapText4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"             
            android:textSize="20sp" 
            android:text="@string/stap4"
            android:layout_below="@+id/stapprogress3"
            android:paddingBottom="5dp"          
            android:textColor="@color/white" 
             /> 
             
        <nl.avans.glassy.Utils.TextViewHelveticaLight
            android:id="@+id/stapText5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"             
            android:textSize="20sp" 
            android:text="@string/stap5"
            android:layout_below="@+id/stapprogress4"
            android:paddingBottom="5dp"          
            android:textColor="@color/white" 
             /> 
             
        <ProgressBar
            android:id="@+id/stapprogress1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/stapText1"
            android:maxHeight="2dp"
    		android:minHeight="2dp"
            android:progress="50"
            style="?android:attr/progressBarStyleHorizontal"
            android:paddingBottom="5dp"  
            android:progressDrawable="@drawable/custom_progressbar" />
        
        <ProgressBar
            android:id="@+id/stapprogress2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/stapText2"
            android:maxHeight="2dp"
    		android:minHeight="2dp"
            android:progress="50"
            style="?android:attr/progressBarStyleHorizontal"
            android:paddingBottom="5dp"  
            android:progressDrawable="@drawable/custom_progressbar" />
        
        <ProgressBar
            android:id="@+id/stapprogress3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/stapText3"
            android:maxHeight="2dp"
    		android:minHeight="2dp"
            android:progress="50"
            style="?android:attr/progressBarStyleHorizontal"
            android:paddingBottom="5dp"  
            android:progressDrawable="@drawable/custom_progressbar" />
        
        <ProgressBar
            android:id="@+id/stapprogress4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/stapText4"
            android:maxHeight="2dp"
    		android:minHeight="2dp"
            android:progress="50"
            style="?android:attr/progressBarStyleHorizontal"
            android:paddingBottom="5dp"  
            android:progressDrawable="@drawable/custom_progressbar" />
        
        <ProgressBar
            android:id="@+id/stapprogress5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/stapText5"
            android:maxHeight="2dp"
    		android:minHeight="2dp"
            android:progress="50"
            style="?android:attr/progressBarStyleHorizontal"
            android:paddingBottom="5dp"  
            android:progressDrawable="@drawable/custom_progressbar" />
 
        
        
        
        
    </RelativeLayout>

</RelativeLayout>
